2008-12-10  Pierre-Olivier Latour  <pol@apple.com>

Reviewed by Darin Adler.

        KeyframeAnimation::animate() needs to compute the elapsed animation time
        properly taking into account its paused state.

        https://bugs.webkit.org/show_bug.cgi?id=22773

        Test: animations/animation-drt-api-multiple-keyframes.html

        * page/animation/KeyframeAnimation.cpp:
        (WebCore::KeyframeAnimation::animate):



Canonical link: https://commits.webkit.org/31380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39176 268f45cc-cd09-0410-ab3c-d52691b4dbfc